--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_marginBottom="55dp"/>
 
     <com.google.android.material.textfield.TextInputLayout
+        style="?attr/textInputFilledStyle"
         android:id="@+id/ti_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -27,11 +28,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:shapeAppearanceOverlay="@style/CustomTextInputLayout"
         app:boxBackgroundColor="@color/white"
-        app:shapeAppearanceOverlay="@style/CustomTextInputLayout">
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_email"
+            android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/name"/>
@@ -45,9 +48,12 @@
         app:layout_constraintTop_toBottomOf="@+id/ti_name"
         app:layout_constraintStart_toStartOf="@+id/ti_name"
         app:layout_constraintEnd_toEndOf="@+id/ti_name"
-        app:boxBackgroundColor="@color/white"
+        style="?attr/textInputFilledStyle"
         app:shapeAppearanceOverlay="@style/CustomTextInputLayout"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        app:boxBackgroundColor="@color/white"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_palindrome"
