--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SecondScreenActivity">
+    tools:context=".ui.second.SecondScreenActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/top_app_bar"
